--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
       </div>
 
       <!-- BLOG DELETE HAPPENED -->
-      <div class="alert alert-info alert-dismissible item-delete-alert-success" role="alert">
+      <div class="alert alert-info alert-fixed-top blog-delete-alert-success" role="alert">
           Blog Was Deleted Successfully.
       </div>
 
       <!-- PAGE DELETE HAPPENED -->
-      <div class="alert alert-info alert-dismissible item-delete-alert-success" role="alert">
+      <div class="alert alert-info alert-fixed-top page-delete-alert-success" role="alert">
           Page Was Deleted Successfully.
       </div>
 
@@ -179,8 +179,8 @@
             <!-- Blog Text Area -->
             <div id='blogTextArea' class="well col-md-9 blog">
               <form id="blogCreateForm">
-                <textarea id="blogTitleBox" class="blogfield"rows="2" cols="75" name="post[title]" placeholder="Enter blog title!"></textarea>
-                <textarea id="blogBodyBox" class="blogfield" rows="15" cols="75" name="post[body]" placeholder="Enter blog Body!"></textarea>
+                <textarea id="blogTitleBox" class="blogfield"rows="2" cols="75" name="post[title]" placeholder="Enter blog title!" required></textarea>
+                <textarea id="blogBodyBox" class="blogfield" rows="15" cols="75" name="post[body]" placeholder="Enter blog Body!" required></textarea>
 
                 <button id="createBlogButton" type="submit" role="button" class="btn btn-default createBlogButton">Submit your Blog!</button>
               </form>
@@ -195,9 +195,9 @@
             <!-- Page Text Area -->
             <div id='pageTextArea' class="container well col-md-9 page">
               <form id="create-page-form" role="form">
-                <textarea id="create-page-title" class="pagefield" maxlength="100" rows="2" cols="75" name="page[title]" placeholder="Enter page title!"></textarea>
-                <textarea id="create-page-body" class="pagefield" maxlength="500" rows="15" cols="75" name="page[body]" placeholder="Enter page body!"></textarea>
-                <textarea id="create-page-footer" class="pagefield" maxlength="100" rows="2" cols="75" name="page[footer]" placeholder="Enter page footer!"></textarea>
+                <textarea id="create-page-title" class="pagefield" maxlength="100" rows="2" cols="75" name="page[title]" placeholder="Enter page title!" required></textarea>
+                <textarea id="create-page-body" class="pagefield" maxlength="500" rows="15" cols="75" name="page[body]" placeholder="Enter page body!" required></textarea>
+                <textarea id="create-page-footer" class="pagefield" maxlength="100" rows="2" cols="75" name="page[footer]" placeholder="Enter page footer!" required></textarea>
                 <br>
                 <label for="create-body-confirmation">Choose Template</label>
                 <select name="page[template]" id="create-page-template">
