Fixed alert bugs and blank space entries
Fixed issue where user can enter in a series of blank space. Now users
are forced to enter something other than blank spaces into fields for
blogs and pages. Also fixed alerts for page updates and blog updates.
Also fixed issue where the return key was not working. Updated
placeholder text for pages handlebar update.

--- a/index.html
+++ b/index.html
@@ -106,22 +106,22 @@
 
       <!-- BLOG CREATE FAIL -->
       <div class="alert alert-danger alert-fixed-top create-fail" id="fail-blog-create-alert" role="alert">
-          <strong>Create Blog Failed!</strong> Please put something in all fields.
+          <strong>Create Blog Failed!</strong> No fields can be blank.
       </div>
 
       <!-- PAGE CREATE FAIL -->
       <div class="alert alert-danger alert-fixed-top create-fail" id="fail-page-create-alert" role="alert">
-          <strong>Create Page Failed!</strong> Please put something in all fields.
+          <strong>Create Page Failed!</strong> No fields can be blank.
       </div>
 
       <!-- BLOG UPDATE FAIL -->
       <div class="alert alert-danger alert-fixed-top update-fail" id="fail-blog-update-alert" role="alert">
-          <strong>Update Blog Failed!</strong> Please put something in all fields.
+          <strong>Update Blog Failed!</strong> No fields can be blank.
       </div>
 
       <!-- PAGE UPDATE FAIL -->
       <div class="alert alert-danger alert-fixed-top update-fail" id="fail-page-update-alert" role="alert">
-          <strong>Update Page Failed!</strong> Please put something in all fields.
+          <strong>Update Page Failed!</strong> No fields can be blank.
       </div>
 
       <!-- BLOG DELETE HAPPENED -->
