Fixed Visitor Blogs
Added comments in the visitor blog without u/d

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </ul>
       <!-- Tab panes -->
       <div class="tab-content">
-        <div role="tabpanel" class="tab-pane container well visitorDiv visitorBlogDiv col-md-12 active visitor-view" id="recent-blogs">Click the tab to view all content</div>
+        <div role="tabpanel" class="tab-pane container well visitorDiv visitorBlogDiv2 col-md-12 active visitor-view" id="recent-blogs">Click the tab to view all content</div>
         <div role="tabpanel" class="tab-pane container well visitorDiv visitorPageDiv col-md-12 visitor-view" id="recent-pages"></div>
       </div>
 
