Check for blanks/empty text area
Added logic to check for blank spaces and empties text area when
necessary

--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
           Blog Was Deleted Successfully.
       </div>
 
+      <!-- Comment create HAPPENED -->
+      <div class="alert alert-info alert-fixed-top comment-create-alert-success" id='comment-create-alert-success' role="alert">
+          Comment created Successfully!
+      </div>
+
+      <!-- Comment update HAPPENED -->
+      <div class="alert alert-info alert-fixed-top comment-update-alert-success" id='comment-update-alert-success' role="alert">
+          Comment updated Successfully!
+      </div>
       <!-- PAGE DELETE HAPPENED -->
       <div class="alert alert-info alert-fixed-top page-delete-alert-success" role="alert">
           Page Was Deleted Successfully.
